responsive-test-mobile

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -65,7 +65,7 @@ body {
 main {
     margin:auto;
     text-align: center;
-    min-width:280px;
+    min-width:300px;
     max-width:800px;
     background-color: white;
     padding: 20px;
@@ -93,8 +93,9 @@ main p {
     text-indent: 20px;
     line-height: 1.5em;
 }
-picture {
+article > picture {
     margin: auto;
+    width: 100%;
 }
 div.video {
     background-color: var(--color02);
