--- a/estilo/style.css
+++ b/estilo/style.css
@@ -93,6 +93,9 @@ main p {
     text-indent: 20px;
     line-height: 1.5em;
 }
+div.img > source {
+    width: 100%;
+}
 div.video {
     background-color: var(--color02);
     margin: 0px -20px 30px -20px;
